--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,7 +10,10 @@
 <body>
   <header id="admin-header">
     <div id="header-title"><%=link_to image_tag("olive-twist-logo.png"), "/"%><i>Admin</i></div>
-    <%=link_to "Logout", "admins/sign_out", id: ""%>
+    <%=link_to "Inquiries", "#", class: "btn btn-default"%>
+    <%if current_admin%>
+      <%=link_to "Logout", destroy_admin_session_path, class: "btn btn-default", id: "admin-logout-btn", method: "DELETE"%>
+    <%end%>
   </header>
   <content>
     <%=yield%>
