--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OliveTwist</title>
+    <title>Olive & Twist</title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,12 +11,8 @@
 
   <body>
     <header id="app-header">
-      <div id="header-title"><%=link_to image_tag("olive-twist-logo.png"), "/"%></div>
-      <%=link_to "about us", "/about_us", class: "header-btn"%>
-      <%=link_to "example menus", "/menus", class: "header-btn"%>
-      <%=link_to "book us", "/book_us", class: "header-btn"%>
-      <%=link_to "education", "/education", class: "header-btn"%>
-      <span id="header-tagline">Let Us Help Shake Up Your Party!</span>
+      <h1 id="header-title">Olive & Twist</h1>
+      <div id="header-tagline">Classic Cocktail Catering in San Diego</div>
     </header>
     <aside class="notice"><%= notice %></aside>
     <aside class="alert"><%= alert %></aside>
