--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
 
   <body>
     <header id="app-header">
-      <h1 id="header-title">Olive & Twist</h1>
-      <div id="header-tagline">Classic Cocktail Catering in San Diego</div>
+      <a href="/"><h1 id="header-title">Olive & Twist</h1></a>
+      <div id="header-tagline">Cocktail Catering in San Diego</div>
+      <%=link_to "About", about_path, class: "header-link"%>
+      <%=link_to "Contact", contact_path, class: "header-link"%>
     </header>
     <aside class="notice"><%= notice %></aside>
     <aside class="alert"><%= alert %></aside>
