--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -3,4 +3,5 @@
   <p>Cory Mathis & Michelle Carbone</p>
   <p>Email: oliveandtwistsd@gmail.com</p>
   <p>Phone: 314-580-0018</p>
+  <p>Instagram: <%=link_to "@oliveandtwist", "https://www.instagram.com/oliveandtwist/"%></p>
 </div>
